center qr code on page

--- a/qr_code_component/index.html
+++ b/qr_code_component/index.html
@@ -15,11 +15,13 @@
   </style>
 </head>
 <body>
-  <article id="qr-container" class="">
-    <img class="qr-img" src="./images/image-qr-code.png">
-    <span class="qr-title">Improve your front-end skills by building projects</span>
-    <p class="qr-description">Scan the QR code to visit Frontend Mentor and take your coding skills to the next level</p>
-  </article>
+  <div class="center">
+    <article id="qr-container" class="">
+      <img class="qr-img" src="./images/image-qr-code.png">
+      <span class="qr-title">Improve your front-end skills by building projects</span>
+      <p class="qr-description">Scan the QR code to visit Frontend Mentor and take your coding skills to the next level</p>
+    </article>
+  </div>
 
   <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
