--- a/newsletter-signup/index.html
+++ b/newsletter-signup/index.html
@@ -17,53 +17,58 @@
   </style>
 </head>
 <body>
-
-  <!-- Sign-up form start -->
   <main>
-    <div>
-      <img src="./assets/images/illustration-sign-up-mobile.svg" alt="">
-    </div>
-    <section class="info">
-      <h1>Stay updated!</h1>
-
-      <p>Join 60,000+ product managers receiving monthly updates on:</p>
-
-      <div class="update-list">
-        <div class="list-item">
-          <svg xmlns="http://www.w3.org/2000/svg" width="21" height="21" viewBox="0 0 21 21"><g fill="none"><circle cx="10.5" cy="10.5" r="10.5" fill="#FF6155"/><path stroke="#FFF" stroke-width="2" d="M6 11.381 8.735 14 15 8"/></g></svg>
-          <span>Product discovery and building what matters</span>
-        </div>
-
-        <div class="list-item">
-          <svg xmlns="http://www.w3.org/2000/svg" width="21" height="21" viewBox="0 0 21 21"><g fill="none"><circle cx="10.5" cy="10.5" r="10.5" fill="#FF6155"/><path stroke="#FFF" stroke-width="2" d="M6 11.381 8.735 14 15 8"/></g></svg>
-          <span>Measuring to ensure updates are a success</span>
-        </div>
-
-        <div class="list-item">
-          <svg xmlns="http://www.w3.org/2000/svg" width="21" height="21" viewBox="0 0 21 21"><g fill="none"><circle cx="10.5" cy="10.5" r="10.5" fill="#FF6155"/><path stroke="#FFF" stroke-width="2" d="M6 11.381 8.735 14 15 8"/></g></svg>
-          <span>And much more!</span>
-        </div>
+    <!-- Sign-up form start -->
+    <div style="display:none;">
+      <div>
+        <img src="./assets/images/illustration-sign-up-mobile.svg" alt="">
       </div>
+      <section class="info">
+        <h1>Stay updated!</h1>
+  
+        <p>Join 60,000+ product managers receiving monthly updates on:</p>
+  
+        <div class="update-list">
+          <div class="list-item">
+            <svg xmlns="http://www.w3.org/2000/svg" width="21" height="21" viewBox="0 0 21 21"><g fill="none"><circle cx="10.5" cy="10.5" r="10.5" fill="#FF6155"/><path stroke="#FFF" stroke-width="2" d="M6 11.381 8.735 14 15 8"/></g></svg>
+            <span>Product discovery and building what matters</span>
+          </div>
+  
+          <div class="list-item">
+            <svg xmlns="http://www.w3.org/2000/svg" width="21" height="21" viewBox="0 0 21 21"><g fill="none"><circle cx="10.5" cy="10.5" r="10.5" fill="#FF6155"/><path stroke="#FFF" stroke-width="2" d="M6 11.381 8.735 14 15 8"/></g></svg>
+            <span>Measuring to ensure updates are a success</span>
+          </div>
+  
+          <div class="list-item">
+            <svg xmlns="http://www.w3.org/2000/svg" width="21" height="21" viewBox="0 0 21 21"><g fill="none"><circle cx="10.5" cy="10.5" r="10.5" fill="#FF6155"/><path stroke="#FFF" stroke-width="2" d="M6 11.381 8.735 14 15 8"/></g></svg>
+            <span>And much more!</span>
+          </div>
+        </div>
+  
+        <form class="email-form">
+          <label for="email"><b>Email address</b></label>
+          <input type="text" name="email" placeholder="email@company.com">
+          <button><b>Subscribe to monthly newsletter</b></button>
+        </form>
+      </section>
+    </div>
+    <!-- Sign-up form end -->
 
-      <form id="email-form">
-        <label for="email"><b>Email address</b></label>
-        <input type="text" name="email" placeholder="email@company.com">
-        <button><b>Subscribe to monthly newsletter</b></button>
-      </form>
-    </section>
+    <!-- Success message start -->
+    <div>
+      <section class="success-msg">
+        <img src="./assets/images/icon-success.svg">
+        <h1>Thanks for subscribing!</h1>
+        <p>A confirmation email has been sent to <b>ash@loremcompany.com</b>. 
+          Please open it and click the button inside to confirm your subscription.
+        </p>
+        <button>Dismiss message</button>
+      </section>
+    </div>
+    <!-- Success message end -->
   </main>
-  <!-- Sign-up form end -->
 
-  <!-- Success message start -->
 
-  <!-- Thanks for subscribing!
-
-  A confirmation email has been sent to ash@loremcompany.com. 
-  Please open it and click the button inside to confirm your subscription.
-
-  Dismiss message -->
-
-  <!-- Success message end -->
   
   <!-- <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
