--- a/newsletter-signup/index.html
+++ b/newsletter-signup/index.html
@@ -19,7 +19,7 @@
 <body>
   <main>
     <!-- Sign-up form start -->
-    <div style="display:none;">
+    <div class="sign-up-holder">
       <div>
         <img src="./assets/images/illustration-sign-up-mobile.svg" alt="">
       </div>
@@ -45,26 +45,24 @@
           </div>
         </div>
   
-        <form class="email-form">
+        <form id="email-form" class="email-form">
           <label for="email"><b>Email address</b></label>
-          <input type="text" name="email" placeholder="email@company.com">
-          <button><b>Subscribe to monthly newsletter</b></button>
+          <input id="email-input" type="email" name="email" placeholder="email@company.com" required>
+          <button id="subscribe-btn" type="submit"><b>Subscribe to monthly newsletter</b></button>
         </form>
       </section>
     </div>
     <!-- Sign-up form end -->
 
     <!-- Success message start -->
-    <div>
-      <section class="success-msg">
-        <img src="./assets/images/icon-success.svg">
-        <h1>Thanks for subscribing!</h1>
-        <p>A confirmation email has been sent to <b>ash@loremcompany.com</b>. 
-          Please open it and click the button inside to confirm your subscription.
-        </p>
-        <button>Dismiss message</button>
-      </section>
-    </div>
+    <section class="success-msg hidden">
+      <img src="./assets/images/icon-success.svg">
+      <h1>Thanks for subscribing!</h1>
+      <p>A confirmation email has been sent to <b>ash@loremcompany.com</b>. 
+        Please open it and click the button inside to confirm your subscription.
+      </p>
+      <button id="dismiss" type="button">Dismiss message</button>
+    </section>
     <!-- Success message end -->
   </main>
 
@@ -74,5 +72,6 @@
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
     Coded by <a href="#">Your Name Here</a>.
   </div> -->
+  <script src="./index.js"></script>
 </body>
 </html>
