--- a/newsletter-signup/index.html
+++ b/newsletter-signup/index.html
@@ -21,9 +21,9 @@
     <!-- Sign-up form start -->
     <div class="sign-up-holder">
       <div>
-        <img src="./assets/images/illustration-sign-up-mobile.svg" alt="">
+        <img class="image" src="./assets/images/illustration-sign-up-mobile.svg" alt="">
       </div>
-      <section class="info">
+      <section class="info text">
         <h1>Stay updated!</h1>
   
         <p>Join 60,000+ product managers receiving monthly updates on:</p>
