--- a/newsletter-signup/index.html
+++ b/newsletter-signup/index.html
@@ -8,21 +8,16 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="styles.css">
-  <title>Frontend Mentor | Newsletter sign-up form with success message</title>
-
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
+  <title>Sign-up form</title>
 </head>
 <body>
   <main>
     <!-- Sign-up form start -->
     <div class="sign-up-holder">
-      <div>
+      <picture>
+        <source>
         <img class="image" src="./assets/images/illustration-sign-up-mobile.svg" alt="">
-      </div>
+      </picture>
       <section class="info text">
         <h1>Stay updated!</h1>
   
@@ -55,18 +50,18 @@
     <!-- Sign-up form end -->
 
     <!-- Success message start -->
-    <section class="success-msg hidden">
-      <img src="./assets/images/icon-success.svg">
-      <h1>Thanks for subscribing!</h1>
-      <p>A confirmation email has been sent to <b>ash@loremcompany.com</b>. 
-        Please open it and click the button inside to confirm your subscription.
-      </p>
-      <button id="dismiss" type="button">Dismiss message</button>
+    <section class="success-msg  hidden">
+        <picture>
+          <img src="./assets/images/icon-success.svg" alt="">
+        </picture>
+        <h1>Thanks for subscribing!</h1>
+        <p>A confirmation email has been sent to <b>ash@loremcompany.com</b>. 
+          Please open it and click the button inside to confirm your subscription.
+        </p>
+        <button id="dismiss" type="button">Dismiss message</button>
     </section>
     <!-- Success message end -->
   </main>
-
-
   
   <!-- <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
