--- a/news-homepage-main/index.html
+++ b/news-homepage-main/index.html
@@ -35,8 +35,8 @@
       </header>
       <div class="flex flex-col space-y-8 grid-container sm:max-width-[600px] sm:min-width-[500px]">
         <picture class="mt-8 hero-img-container">
-          <source media="(min-width: 640px)" srcset="../assets/images/image-web-3-desktop.jpg">
-          <img class="hero-img" src="../assets/images/image-web-3-mobile.jpg">
+          <source media="(min-width: 640px)" srcset="./assets/images/image-web-3-desktop.jpg">
+          <img class="hero-img" src="./assets/images/image-web-3-mobile.jpg">
         </picture>
 
         <section id="intro">
@@ -69,7 +69,7 @@
         <section class="flex flex-col trends md:flex-row">
           <article class="flex trend mb-8 md:mb-0">
             <picture class="min-w-24 max-w-24 md:max-w-36">
-              <img class="object-cover" src="../assets/images/image-retro-pcs.jpg">
+              <img class="object-cover" src="./assets/images/image-retro-pcs.jpg">
             </picture>
             <div class="flex flex-col ml-6 space-y-2">
               <span class="text-4xl">01</span>
@@ -80,7 +80,7 @@
     
           <article class="flex trend mb-8 md:mb-0">
             <picture class="min-w-24 max-w-24 md:max-w-36">
-              <img class="object-cover" src="../assets/images/image-top-laptops.jpg">
+              <img class="object-cover" src="./assets/images/image-top-laptops.jpg">
             </picture>
             <div class="flex flex-col ml-6 space-y-2">
               <span class="text-4xl">02</span>
@@ -91,7 +91,7 @@
     
           <article class="flex trend mb-8 md:mb-0">
             <picture class="min-w-24 max-w-24 md:max-w-36">
-              <img class="object-cover" src="../assets/images/image-gaming-growth.jpg">
+              <img class="object-cover" src="./assets/images/image-gaming-growth.jpg">
             </picture>
             <div class="flex flex-col ml-6 space-y-2">
               <span class="text-4xl">03</span>
